--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "babel-jest": "^29.2.1",
     "cypress": "10.6.0",
     "cypress-multi-reporters": "1.6.1",
-    "eslint-config-trybe-frontend": "1.3.1",
+    "eslint-config-trybe-frontend": "^1.3.1",
     "jest": "28.1.3",
     "mocha": "10.0.0",
     "mochawesome": "7.1.3",
