--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "babel-jest": "^29.2.1",
     "cypress": "10.6.0",
     "cypress-multi-reporters": "1.6.1",
+    "eslint": "^8.27.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-trybe-frontend": "^1.3.1",
+    "eslint-plugin-import": "^2.26.0",
     "jest": "28.1.3",
     "mocha": "10.0.0",
     "mochawesome": "7.1.3",
