--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "cy": "cypress run",
     "cy:open": "cypress open --e2e --browser chrome",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js",
-    "lint:styles": "stylelint *.css --config .stylelintrc.json --ignore-disables --allow-empty-input"
+    "lint:styles": "stylelint .css --config .stylelintrc.json --ignore-disables --allow-empty-input"
   },
   "jest": {
     "coverageReporters": [
@@ -18,10 +18,10 @@
       "html"
     ],
     "collectCoverageFrom": [
-      "**/helpers/fetchFunctions.js"
+      "/helpers/fetchFunctions.js"
     ],
     "testMatch": [
-      "**/tests/**/*.test.js?(x)"
+      "/tests/**/.test.js?(x)"
     ]
   },
   "babel": {
@@ -40,10 +40,7 @@
     "babel-jest": "^29.2.1",
     "cypress": "10.6.0",
     "cypress-multi-reporters": "1.6.1",
-    "eslint": "^8.27.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-trybe-frontend": "^1.3.1",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-config-trybe-frontend": "1.3.1",
     "jest": "28.1.3",
     "mocha": "10.0.0",
     "mochawesome": "7.1.3",
