--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "cy": "cypress run",
     "cy:open": "cypress open --e2e --browser chrome",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js",
-    "lint:styles": "stylelint .css --config .stylelintrc.json --ignore-disables --allow-empty-input"
+    "lint:styles": "stylelint *.css --config .stylelintrc.json --ignore-disables --allow-empty-input"
   },
   "jest": {
     "coverageReporters": [
@@ -18,10 +18,10 @@
       "html"
     ],
     "collectCoverageFrom": [
-      "/helpers/fetchFunctions.js"
+      "**/helpers/fetchFunctions.js"
     ],
     "testMatch": [
-      "/tests/**/.test.js?(x)"
+      "**/tests/**/*.test.js?(x)"
     ]
   },
   "babel": {
